--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install": "^0.13.0",
     "npm": "^6.14.10",
     "sharp": "^0.28.3",
+    "xml2js": "^0.4.23",
     "xmlbuilder": "^15.1.1"
   }
 }
